Removed dependency from sun.misc.BASE64Encoder.